[tool.poetry]
name = "domjudge-testcase"
version = "0.1.0"
description = ""
authors = ["jasonxie <x5758x@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
